2002-06-01  Han-Wen  <hanwen@cs.uu.nl>

	* lily/beam.cc (shift_region_to_valid): Try to shift positions
	after slope-damping and concaveness check, so that short-stems are
	not violated.

2002-06-01  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (quanting): Increase REGION_SIZE to 4 by default.
	While we'd rather not pay the performance penalty, we certainly
	don't want silly bugs.  This should be looked into.

2002-05-31  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/aclocal.m4: Fix for ash as /bin/sh.

2002-05-31  Han-Wen  <hanwen@cs.uu.nl>

	* scripts/musedata2ly.py (Parser.parse_note_line): add dots. Add
	note that missing features are excercise for user.

2002-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/beam.cc (score_stem_lengths): Bugfix for knees: use correct
	(but alas, not partly precomputed) value for current_y when
	calculating stem length demerits.
	(calc_stem_y): Temporary precomputed factors fix.

	* lily/stem.cc (calc_stem_info): Take multiplicity into account
	for shortest_y too.

	* input/bugs/melisma-tie-rest.ly: New file.

2002-05-30  Han-Wen  <hanwen@cs.uu.nl>

	* lily/stem.cc (calc_stem_info): remove min_y member, rename
	stuff. 	Remove kneeing stuff.

	* lily/beam.cc (brew_molecule): remove beam direction. Lots of
	twiddling

2002-05-29  Jan Nieuwenhuizen  <janneke@gnu.org>

	* scm/sketch.scm: 
	* scm/ps.scm: 
	* scm/pdftex.scm: 
	* scm/pdf.scm: 
	* scm/tex.scm: Add check for Guile-1.4.1.  Guile includes
	patch-level of version in minor-version string.  Arg.

2002-05-29  Han-Wen  <hanwen@cs.uu.nl>

	* ly/engraver-init.ly (TabStaffContext): 
	enable TabStaff by default.

	*  Tablature support by Jean-Baptiste Lamy <jiba@@tuxfamily.org>

2002-05-28  Jan Nieuwenhuizen  <janneke@gnu.org>

	* config.hh.in: Remove duplicate DIR_DATADIR entry.

	* aclocal.m4: Regenerate.
	
	* stepmake/aclocal.m4: Append $FULL_VERSION to datadir.

2002-05-25  Heikki Junes  <heikki.junes@hut.fi>
