@@ -1,3 +1,9 @@
+2002-06-03  Han-Wen  <hanwen@cs.uu.nl>
+
+	* lily/beam-engraver.cc (class Grace_beam_engraver): derive from
+	beam-engraver: use different engraver so we can mix normal and
+	grace beams.
+
 2002-06-01  Han-Wen  <hanwen@cs.uu.nl>
 
 	* lily/beam.cc (shift_region_to_valid): Try to shift positions
@@ -17,7 +23,7 @@
 2002-05-31  Han-Wen  <hanwen@cs.uu.nl>
 
 	* scripts/musedata2ly.py (Parser.parse_note_line): add dots. Add
-	note that missing features are excercise for user.
+	notice that missing features are exercise for user.
 
 2002-05-30  Jan Nieuwenhuizen  <janneke@gnu.org>
 
